# unfinished-minecraft-clone

./: .gitignore  CMakeLists.txt  makefile
glsl/: cube.vert  point.frag  point.vert  quad.frag  quad.vert  voxel.frag  voxel.vert
include/: aabb.hpp  application.hpp  camera.hpp  chunk.hpp  chunk_cache.hpp  chunk_defs.hpp  chunk_generation_job.hpp  chunk_manager.hpp  chunk_occluder.hpp  cube_info.hpp  frustum.hpp  grass_texture.hpp  intersection_tests.hpp  job.hpp  job_system.hpp  mesh.hpp  neighbors.hpp  objloader.hpp  octree_mixin.hpp  plane.hpp  ray.hpp  shader.hpp  simplex.hpp  texture.hpp  util.hpp  vector_range_iterator.hpp
lib/: aabb.cpp  application.cpp  camera.cpp  chunk.cpp  chunk_cache.cpp  chunk_generation_job.cpp  chunk_manager.cpp  chunk_occluder.cpp  cube_info.cpp  frustum.cpp  grass_texture.cpp  intersection_tests.cpp  job_system.cpp  mesh.cpp  neighbors.cpp  objloader.cpp  octree_mixin.cpp  plane.cpp  ray.cpp  shader.cpp  texture.cpp  util.cpp
src/: main.cpp
test/: intersection_aabb_ray.cpp  octree_mixin.cpp
textures/: grass.kra
